--- a/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
@@ -1,4 +1,8 @@
-﻿@model MODAMS.Models.ViewModels.Dto.VerificationScheduleEditDTO
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model MODAMS.Models.ViewModels.Dto.VerificationScheduleEditDTO
 
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
@@ -62,10 +66,12 @@
         padding: 5px 10px;
     }
 </style>
-
+@{
+    bool _isSomali = CultureInfo.CurrentCulture.Name == "so";
+}
 <div class="page-header">
     <div>
-        <h1 class="page-title">Asset Verification Schedule</h1>
+        <h1 class="page-title">@Localizer["AssetVerificationSchedule"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -83,7 +89,7 @@
                     <div class="card divShadow">
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center justify-content-between">
-                                <h4 class="m-0 text-black">Edit Schedule</h4>
+                                <h4 class="m-0 text-black">@Localizer["EditSchedule"]</h4>
                             </div>
                         </div>
                     </div>
@@ -100,13 +106,13 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="mb-3 form-group">
-                                                        <label asp-for="StoreId" class="text-black">Project</label>
+                                                        <label asp-for="StoreId" class="text-black">@Localizer["Department"]</label>
                                                         <select asp-for="StoreId" class="select2 form-select" id="storeDropdown">
-                                                            <option disabled selected>-Select Project-</option>
+                                                            <option disabled selected>-@Localizer["SelectDepartment"]-</option>
                                                             @foreach (var store in Model.Stores.DistinctBy(ps => ps.Id))
                                                             {
                                                                 <option value="@store.Id" data-asset-count="@store.Assets.Count">
-                                                                    @store.Name
+                                                                    @(_isSomali? store.Department.NameSo:store.Department.Name)
                                                                 </option>
                                                             }
                                                         </select>
@@ -115,10 +121,10 @@
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="mb-3 form-group">
-                                                        <label asp-for="VerificationType" class="text-black">Verification Type</label>
+                                                        <label asp-for="VerificationType" class="text-black"></label>
                                                         <select asp-for="VerificationType" class="form-select select2" id="verificationTypeDropdown">
-                                                            <option value="Full Verification">Full Verification</option>
-                                                            <option value="Custom Verification">Custom Verification</option>
+                                                            <option value="Full Verification">@Localizer["FullVerification"]</option>
+                                                            <option value="Custom Verification">@Localizer["CustomVerification"]</option>
                                                         </select>
                                                         <span asp-validation-for="VerificationType" class="text-danger"></span>
                                                     </div>
@@ -127,13 +133,13 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="mb-3 form-group">
-                                                        <label class="text-black">Number of Assets in Store</label>
+                                                        <label class="text-black">@Localizer["NumberOfAssetsInStore"]</label>
                                                         <input id="NumberOfAssets" class="form-control" type="text" value="@Model.AssetCount(Model.StoreId)" disabled />
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="mb-3 form-group">
-                                                        <label asp-for="NumberOfAssetsToVerify" class="text-black">Number of Assets to Verify</label>
+                                                        <label asp-for="NumberOfAssetsToVerify" class="text-black"></label>
                                                         <input asp-for="NumberOfAssetsToVerify" id="NumberOfAssetsToVerify" class="form-control" />
                                                         <span asp-validation-for="NumberOfAssetsToVerify" class="text-danger" id="spanNumberOfAssetsToVerify"></span>
                                                     </div>
@@ -142,14 +148,14 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="mb-3 form-group">
-                                                        <label asp-for="StartDate" class="text-black">Start Date</label>
+                                                        <label asp-for="StartDate" class="text-black"></label>
                                                         <input asp-for="StartDate" asp-format="{0:dd-MMM-yyyy}" class="form-control picker" aria-required="true" type="text" autocomplete="off" />
                                                         <span asp-validation-for="StartDate" class="text-danger"></span>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-6">
                                                     <div class="mb-3 form-group">
-                                                        <label asp-for="EndDate" class="text-black">Plan End Date</label>
+                                                        <label asp-for="EndDate" class="text-black"></label>
                                                         <input asp-for="EndDate" asp-format="{0:dd-MMM-yyyy}" class="form-control picker" aria-required="true" type="text" autocomplete="off" />
                                                         <span asp-validation-for="EndDate" class="text-danger"></span>
                                                     </div>
@@ -176,7 +182,7 @@
                                 <div class="card">
                                     <div class="card-status bg-secondary br-tr-7 br-tl-7"></div>
                                     <div class="card-body">
-                                        <h5 class="text-black">Add Team Members</h5>
+                                        <h5 class="text-black">@Localizer["AddTeamMembers"]</h5>
                                         <hr class="text-bold" />
                                         <div class="row">
                                             <div class="col-md-12">
@@ -193,15 +199,15 @@
                                             <div class="col-md-7">
                                                 <div class="form-group">
                                                     <select class="form-select select2" id="dd-employees" asp-items="@Model.EmployeesList">
-                                                        <option value="0" disabled selected>-Select Employee-</option>
+                                                        <option value="0" disabled selected>-@Localizer["SelectEmployee"]-</option>
                                                     </select>
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <select class="form-select select2" id="dd-role">
-                                                        <option value="Team Leader">Team Leader</option>
-                                                        <option value="Team Member">Team Member</option>
+                                                        <option value="Team Leader">@Localizer["TeamLeader"]</option>
+                                                        <option value="Team Member">@Localizer["TeamMember"]</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -218,9 +224,14 @@
                     </div>
                     <div class="card-footer">
                         <div class="flex">
-                            <button type="button" id="btn-submit" class="btn btn-info-gradient"><i class="fa fa-check-circle"></i>&nbsp;Save Schedule</button>
-                            <a asp-action="PreviewSchedule" asp-controller="Verifications" asp-route-id="@Model.Id" class="btn btn-primary-gradient"><i class="fe fe-eye"></i>&nbsp;Preview Schedule</a>
-                            <a asp-action="Index" asp-controller="Verifications" id="btnCancel" class="btn btn-secondary-gradient"><i class="fe fe-corner-up-left"></i>&nbsp;Cancel</a>
+                            <button type="button" class="btn btn-info" id="btn-submit">
+                                <i class="fa fa-check-circle"></i><span class="loading">&nbsp;@Localizer["SaveSchedule"]</span>
+                            </button>
+                            <a asp-action="PreviewSchedule" asp-controller="Verifications" asp-route-id="@Model.Id" class="btn btn-primary-gradient"><i class="fa fa-eye"></i>&nbsp;@Localizer["PreviewSchedule"]</a>
+                            <button class="btn btn-secondary btn-secondary" id="btnDeleteSchedule">
+                                <i class="fa fa-trash"></i> @Localizer["DeleteSchedule"]<i class="icon ion-ios-arrow-down text-12"></i>
+                            </button>
+                            <a asp-action="Index" asp-controller="Verifications" id="btnCancel" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
                         </div>
                     </div>
                 </div>
@@ -232,12 +243,12 @@
         <div class="row">
 
             <div class="col-sm-12">
-                <a asp-action="Index" asp-controller="Verifications" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                <a asp-action="Index" asp-controller="Verifications" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
             </div>
         </div>
     </div>
 </div>
-
+@await Html.PartialAsync("~/Views/Shared/_Confirmation.cshtml")
 
 @section Scripts {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
@@ -248,6 +259,12 @@
 
         let selectedTeamMembers = [];
         let memberCounter = 0;
+        const isSomali = getCurrentLanguage() === "so";
+
+        const localizedMember = {
+            "Team Leader": "@Localizer["TeamLeader"]",
+            "Team Member": "@Localizer["TeamMember"]",
+        };
 
         $(document).ready(function () {
             hideMenu();
@@ -288,7 +305,7 @@
                     let rowHtml = `<tr id="member-${memberCounter}">
                                             <td class="text-black bg-transparent border-bottom-0 w-2">${memberCounter}</td>
                                             <td class="text-black bg-transparent border-bottom-0 w-20">${getName(selectedEmployeeId)}</td>
-                                            <td class="text-black bg-transparent border-bottom-0 w-10">${selectedRole}</td>
+                                            <td class="text-black bg-transparent border-bottom-0 w-10">${localizedMember[selectedRole]}</td>
                                             <td class="text-black bg-transparent border-bottom-0 w-5 no-btn">
                                                 <a style="cursor:pointer;" onclick="removeMember(${memberCounter});">
                                                     <i class="fa fa-times text-danger"></i>
@@ -308,7 +325,7 @@
                 }
 
             });
-            
+
             $('#storeDropdown').change(function () {
                 changestoreDropdown();
             });
@@ -325,7 +342,12 @@
 
                 // Validate that the number is greater than or equal to 1
                 if (isNaN(assetsToVerify) || assetsToVerify < 1 || assetsToVerify > assetCount) {
-                    $("#spanNumberOfAssetsToVerify").text(`Value should be between 1 and ${assetCount}`);
+                    const message = isSomali
+                    ? `Qiimaha waa inuu u dhexeeyaa 1 iyo ${assetCount}`
+                    : `Value should be between 1 and ${assetCount}`;
+
+                    $("#spanNumberOfAssetsToVerify").text(message);
+
                     blnCheck = false;
                 } else {
                     $("#spanNumberOfAssetsToVerify").text(""); // Clear the error message if valid
@@ -338,7 +360,7 @@
                 } else if (selectedTeamMembers.length === 0) {
                     notif({
                         type: "error",
-                        msg: "<b>Error: </b>No Team members selected!",
+                        msg: isSomali?"<b>Khalad: </b>Xubno Kooxeed lama xulin!":"<b>Error: </b>No Team members selected!",
                         position: "center",
                         width: 500,
                         height: 60,
@@ -346,7 +368,21 @@
                     });
                 }
             });
+
+            $("#btnDeleteSchedule").on("click", (e) => {
+                e.preventDefault();
+                const options = {
+                    actionUrl: '@Url.Action("DeleteSchedule", "Verifications", new { area = "Users", id = @Model.Id })',
+                    title: '@Localizer["DeleteSchedule"]',
+                    message: '@Localizer["DeleteConfirmationMessage"]',
+                    btnConfirmText: '@Localizer["Confirm"]',
+                    btnCancelText: '@Localizer["Cancel"]'
+                };
+                openConfirmation(options);
+            });
         });
+
+
         const changeVerificationTypeDropdown = () => {
             // Get asset count from the selected project store
             var assetCount = $('#storeDropdown').find('option:selected').data('asset-count');
@@ -373,7 +409,7 @@
 
             // Get the selected value of the verification type dropdown
             var selectedValue = $('#verificationTypeDropdown').val();
-            
+
             // Handle verification type selection
             if (selectedValue === "Custom Verification") {
                 $("#NumberOfAssetsToVerify").prop("disabled", false);
@@ -382,7 +418,7 @@
             }
         }
         const loadExistingTeamMembers = () => {
-            
+
             //let existingTeamMembers = JSON.parse(currentTeamData);
             currentTeamData.forEach(member => {
                 memberCounter++;
@@ -399,7 +435,7 @@
                 let rowHtml = `<tr id="member-${memberCounter}">
                                 <td class="text-black bg-transparent border-bottom-0 w-2">${memberCounter}</td>
                                 <td class="text-black bg-transparent border-bottom-0 w-20">${getName(member.employeeId)}</td>
-                                <td class="text-black bg-transparent border-bottom-0 w-10">${member.role}</td>
+                                <td class="text-black bg-transparent border-bottom-0 w-10">${localizedMember[member.role]}</td>
                                 <td class="text-black bg-transparent border-bottom-0 w-5 no-btn">
                                     <a style="cursor:pointer;" onclick="removeMember(${memberCounter});">
                                         <i class="fa fa-times text-danger"></i>
@@ -423,7 +459,7 @@
             let removedMember = selectedTeamMembers.find(member => member.id === id);
 
             if (removedMember.role === "Team Leader") {
-                $("#dd-role").append('<option value="Team Leader">Team Leader</option>');
+                $("#dd-role").append(`<option value="Team Leader">${localizedMember["Team Leader"]}</option>`);
             }
 
             if (removedMember) {
