--- a/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
@@ -1,11 +1,14 @@
-﻿@model MODAMS.Models.ViewModels.Dto.VerificationsDTO
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model MODAMS.Models.ViewModels.Dto.VerificationsDTO
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.css">
 
-
 <div class="page-header">
     <div>
-        <h1 class="page-title">Asset Verifications</h1>
+        <h1 class="page-title">@Localizer["AssetVerifications"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -24,7 +27,7 @@
                 <div class="card divShadow">
                     <div class="card-body p-4">
                         <div class="d-flex align-items-center justify-content-between">
-                            <h4 class="m-0">Asset Verifications</h4>
+                            <h4 class="m-0">@Localizer["AssetVerifications"]</h4>
                         </div>
                     </div>
                 </div>
@@ -38,19 +41,19 @@
                         <a asp-area="Users" asp-controller="Verifications" asp-action="CreateSchedule"
                            class="btn btn-info-gradient trShadow @sDisabled mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                            New Schedule
+                            @Localizer["NewSchedule"]
                         </a>
                         <div class="table-responsive export-table" style="overflow-x: auto; overflow-y: visible;">
                             <table id="tblSchedule" class="table text-nowrap mb-0 table-bordered key-buttons border-top border-bottom project-list-main">
                                 <thead class="bg-primary-gradient ms-auto divShadow">
                                     <tr>
                                         <th class="text-black bg-transparent border-bottom-0 w-2">#</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-20">Department</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-10">Type</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-30">Team</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-10">Start</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-10">End</th>
-                                        <th class="text-black bg-transparent border-bottom-0 w-20">Status</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-20">@Localizer["Department"]</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-10">@Localizer["VerificationType"]</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-30">@Localizer["Team"]</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-10">@Localizer["Start"]</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-10">@Localizer["End"]</th>
+                                        <th class="text-black bg-transparent border-bottom-0 w-20">@Localizer["Status"]</th>
                                         <th class="text-black bg-transparent border-bottom-0 w-5 no-btn"></th>
                                     </tr>
                                 </thead>
@@ -58,6 +61,7 @@
                                     @{
                                         int nCounter = 0;
                                         string sCounter = "";
+                                        bool isSomali = CultureInfo.CurrentCulture.Name == "so";
                                         foreach (var schedule in Model.Schedules)
                                         {
                                             nCounter++;
@@ -65,8 +69,8 @@
                                             sDisabled = schedule.VerificationStatus != "Pending" ? "disabled" : "";
                                             <tr>
                                                 <td class="text-black bg-transparent border-bottom-0 w-2">@sCounter</td>
-                                                <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.Store.Name</td>
-                                                <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.VerificationType</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-20">@(isSomali? schedule.Store.Department.NameSo : schedule.Store.Department.Name)</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-10">@Localizer[schedule.VerificationType]</td>
                                                 <td class="text-black bg-transparent border-bottom-0 w-30">
                                                     <div class="avatar-list avatar-list-stacked">
                                                         @foreach (var emp in schedule.VerificationTeams)
@@ -90,21 +94,21 @@
                                                 </td>
                                                 <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.StartDate.ToString("dd-MMM-yy")</td>
                                                 <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.EndDate.ToString("dd-MMM-yy")</td>
-                                                <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.VerificationStatus</td>
-                                                <td class="text-black bg-transparent border-bottom-0 w-5 no-btn" style="position: relative;">
-                                                    <a asp-controller="Verifications" asp-action="EditSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Edit Schedule">
-                                                        <i class="fe fe-edit"></i>
-                                                    </a>
-                                                    <a asp-controller="Verifications" asp-action="PreviewSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="Preview Schedule">
-                                                        <i class="fe fe-eye"></i>
-                                                    </a>
-                                                    <button type="button"
-                                                            class="btn btn-sm btn-outline-secondary border me-2"
-                                                            data-bs-toggle="modal"
-                                                            data-bs-target="#deleteConfirmationModal"
-                                                            onclick="setDeleteUrl('@schedule.Id')">
-                                                        <i class="fe fe-trash"></i>
-                                                    </button>
+                                                <td class="text-black bg-transparent border-bottom-0 w-20">@Localizer[schedule.VerificationStatus]</td>
+                                                <td class="text-muted fs-15 fw-semibold">
+                                                    <div class="d-flex align-items-stretch">
+                                                        <a asp-controller="Verifications" asp-action="PreviewSchedule" asp-route-id="@schedule.Id"
+                                                           class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["PreviewSchedule"]">
+                                                            <i class="fe fe-eye"></i>
+                                                        </a>
+                                                        <a asp-controller="Verifications" asp-action="EditSchedule" asp-route-id="@schedule.Id"
+                                                           class="btn btn-sm btn-outline-info me-1 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["EditSchedule"]">
+                                                            <i class="fe fe-edit"></i>
+                                                        </a>
+                                                        <button class="btn btn-sm btn-outline-danger me-1 @sDisabled" id="btnDeleteVerification" onclick="deleteSchedule('@schedule.Id');">
+                                                            <i class="fe fe-trash"></i>
+                                                        </button>
+                                                    </div>
                                                 </td>
                                             </tr>
                                         }
@@ -120,7 +124,7 @@
                     <div class="col-md-12 col-sm-12">
                         <div class="card">
                             <div class="card-header border-bottom">
-                                <h3 class="card-title">Verification Schedules by Status</h3>
+                                <h3 class="card-title">@Localizer["VerificationScheduleByStatus"]</h3>
                             </div>
                             <div class="card-status bg-secondary-gradient br-tr-7 br-tl-7"></div>
                             <div class="card-body" style="height:250px;">
@@ -130,34 +134,24 @@
                     </div>
                 </div>
             </div>
-
-            <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-danger" id="deleteConfirmationModalLabel">Confirm Deletion</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Are you sure you want to delete? This action cannot be undone.
-                        </div>
-                        <div class="modal-footer">
-                            <a id="confirmDeleteLink" href="#" class="btn btn-danger">
-                                <i class="fe fe-trash"></i> Delete
-                            </a>
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
+@await Html.PartialAsync("~/Views/Shared/_Confirmation.cshtml")
+
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 @section scripts {
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.min.js"></script>
+
     <script>
+        const isSomali = getCurrentLanguage() === "so";
+
+        const localizedStatuses = {
+            "Pending": "@Localizer["Pending"]",
+            "Ongoing": "@Localizer["Ongoing"]",
+            "Completed": "@Localizer["Completed"]",
+        };
+
         $(document).ready(() => {
             hideMenu();
             makeDataTable('#tblSchedule', 1);
@@ -168,7 +162,9 @@
 
             var chartData = JSON.parse('@Html.Raw(Json.Serialize(Model.GetBarChartData()))');
 
-            var statusLabels = chartData.map(item => item.scheduleStatus);
+            var statusLabels = chartData.map(item =>
+                isSomali ? (localizedStatuses[item.scheduleStatus] || item.scheduleStatus) : item.scheduleStatus
+            );
             var scheduleCounts = chartData.map(item => item.scheduleCount);
 
             var barColors = ['#73C9E6', '#FF7F50', '#87CEEB'];
@@ -198,7 +194,7 @@
                 },
                 yAxis: {
                     type: 'value',
-                    name: 'Number of Schedules'
+                    name: isSomali ? 'Tirada Jadwalada':'Number of Schedules'
                 },
                 series: [
                     {
@@ -220,10 +216,15 @@
             };
             chart.setOption(chartOptions);
         }
-
-        const setDeleteUrl = (scheduleId) => {
-            document.getElementById('confirmDeleteLink').href = `/Users/Verifications/DeleteSchedule/${scheduleId}`;
+        const deleteSchedule = (id) =>{
+            const options = {
+                    actionUrl: `/Users/Verifications/DeleteSchedule/${id}`,
+                    title: '@Localizer["DeleteSchedule"]',
+                    message: '@Localizer["DeleteConfirmationMessage"]',
+                    btnConfirmText: '@Localizer["Confirm"]',
+                    btnCancelText: '@Localizer["Cancel"]'
+                    };
+            openConfirmation(options);
         }
-
     </script>
 }
