--- a/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
@@ -19,7 +19,8 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="~/assets/images/brand/favicon.ico" />
     <!--If Kendo is used it should be added before the report viewer.-->
-    <script src="/api/reports/resources/js/telerikReportViewer-18.2.24.806.min.js/"></script>
+    <script src="/api/reports/resources/js/telerikReportViewer-18.2.24.806.min.js"></script>
+    
 
     <style>
         #reportViewer1 {
@@ -54,28 +55,28 @@
             console.log(params);
             reportId += '.trdp';
 
-            // $("#reportViewer1").telerik_ReportViewer({
+            $("#reportViewer1").telerik_ReportViewer({
 
-            //     serviceUrl: "/api/reports",
-            //     reportSource: {
-            //         report: reportId,
-            //         parameters: params
-            //     },
+                serviceUrl: "/api/reports",
+                reportSource: {
+                    report: reportId,
+                    parameters: params
+                },
 
-            //     viewMode: telerikReportViewer.ViewModes.INTERACTIVE,
-            //     scaleMode: telerikReportViewer.ScaleModes.SPECIFIC,
-            //     scale: 1.0,
-            //     enableAccessibility: true,
-            //     sendEmail: { enabled: false },
-            //     clientSettings: {
-            //         messages: {
-            //             noDataMessage: "No data found or no data available."
-            //         }
-            //     },
-            //     ready: function () {
-            //         //this.refreshReport();
-            //     }
-            // });
+                viewMode: telerikReportViewer.ViewModes.INTERACTIVE,
+                scaleMode: telerikReportViewer.ScaleModes.SPECIFIC,
+                scale: 1.0,
+                enableAccessibility: true,
+                sendEmail: { enabled: false },
+                clientSettings: {
+                    messages: {
+                        noDataMessage: "No data found or no data available."
+                    }
+                },
+                ready: function () {
+                    //this.refreshReport();
+                }
+            });
         });
 
         const getParams = (reportId) => {
